Bug 146269 - No thumbnail preview of document in start center
Summary: No thumbnail preview of document in start center
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.4
Keywords:
Depends on:
Blocks: Start-Center ModifiedStatus
  Show dependency treegraph
 
Reported: 2021-12-16 15:41 UTC by Telesto
Modified: 2026-03-28 14:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-12-16 15:41:06 UTC
Description:
No thumbnail preview of document in start center

Steps to Reproduce:
1. Open attachment 176550 [details]
2. Close the document (and go back to start center)

Actual Results:
No preview

Expected Results:
Preview


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: deea3b7471c3dab0220eca6146c225a2d47681a2
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Kevin Suo 2021-12-17 03:55:24 UTC Comment hidden (obsolete)
Comment 2 Kevin Suo 2021-12-17 04:13:17 UTC
This seems to be a FILESAVE issue. There is no such problem when I generate a docx file from scratch.

Unzip the file and there is no Terminal output is:

warn:sfx:23897:23897:sfx2/source/control/thumbnailview.cxx:93: caught exception while trying to access Thumbnail/thumbnail.png of file:///home/suokunlong/%E4%B8%8B%E8%BD%BD/Sampleshort%20(1).docx com.sun.star.packages.zip.ZipIOException message: Bad Zip File, IOException: Could not parse manifest.xml /home/suokunlong/lo/bibisect-master-source/package/source/zippackage/ZipPackage.cxx:375 /home/suokunlong/lo/bibisect-master-source/package/source/zippackage/ZipPackage.cxx:794
Comment 3 BogdanB 2023-05-29 08:10:30 UTC
I saved the file with another name and reload, and I get the right thumbnail.
Also even if I save the document I will get the right thumbnail, after the step 2.

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: b76a3bdc996f275f9d615b32d6ab89d533a7505c
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 Buovjaga 2024-11-25 13:44:53 UTC
Let's close as the zip is broken.
Comment 5 Buovjaga 2024-11-25 13:52:43 UTC
After more discussion in the dev chat, let's not close it after all.
Comment 6 Mike Kaganski 2024-11-25 14:18:53 UTC
This is a bug. The writing of the preview happens in SfxPickListImpl::AddDocumentToPickList [1]; and the failing condition there is

  !pDocSh->IsModified()

so the real bug is, that the document opens already modified.

[1] https://opengrok.libreoffice.org/xref/core/sfx2/source/appl/sfxpicklist.cxx?r=b7a32682#95
Comment 7 Mike Kaganski 2024-11-25 19:44:21 UTC
https://gerrit.libreoffice.org/c/core/+/177300
Comment 8 Commit Notification 2024-11-26 04:48:05 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1e54b2037a4d58dacc821bd8833e924f6691a7fd

tdf#146269: don't set modified when connecting frame, model and controller

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-11-26 09:40:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/acf704eca7e14a2faea1d3b6e66718db07f8b041

tdf#146269: don't set modified when connecting frame, model and controller

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.