tdf#146269: don't set modified when connecting frame, model and controller

Change-Id: I487a989a97389af11c98e10ac001c860d7855aec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177300
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>