sw/qa/extras/ooxmlexport/ooxmlexport21.cxx
@@ -1165,6 +1165,24 @@ CPPUNIT_TEST_FIXTURE(Test, testCommentWithChildrenTdf163092)
     CPPUNIT_ASSERT_EQUAL(parents[sComment3Id], sComment2Id);
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf146269)
+{
+    // Given a focument with a field in a redline:
+    createSwDoc("deleted_pageref.docx");
+    // It must open unmodified:
+    {
+        auto xModifiable = mxComponent.queryThrow<util::XModifiable>();
+        CPPUNIT_ASSERT(!xModifiable->isModified());
+    }
+
+    // Test also after save-and-reload:
+    saveAndReload(u"Office Open XML Text"_ustr);
+    {
+        auto xModifiable = mxComponent.queryThrow<util::XModifiable>();
+        CPPUNIT_ASSERT(!xModifiable->isModified());
+    }
+}
+
 } // end of anonymous namespace
 CPPUNIT_PLUGIN_IMPLEMENT();
 
